--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
-	"installCommand": "npm ci --prefix Frontend",
-	"buildCommand": "npm run build --prefix Frontend",
-	"outputDirectory": "Frontend/dist",
-	"framework": "vite",
-	"rewrites": [
-		{ "source": "/(.*)", "destination": "/index.html" }
+	"version": 2,
+	"builds": [
+		{
+			"src": "Frontend/package.json",
+			"use": "@vercel/static-build",
+			"config": { "distDir": "dist" }
+		}
+	],
+	"routes": [
+		{ "src": "/(.*)", "dest": "/index.html" }
 	]
 }
 
